@@ -1418,15 +1418,18 @@ public class JobTracker implements MRConstants, InterTrackerProtocol,
           final JobInfo token = new JobInfo();
           token.readFields(in);
           in.close();
+          
+          // Read tokens as JT user
+          JobConf job = new JobConf();
+          final Credentials ts = 
+              (jobTokenFile.getFileSystem(job).exists(jobTokenFile)) ?
+            Credentials.readTokenStorageFile(jobTokenFile, job) : null;
+
+          // Re-submit job  
           final UserGroupInformation ugi = UserGroupInformation
               .createRemoteUser(token.getUser().toString());
           ugi.doAs(new PrivilegedExceptionAction<JobStatus>() {
             public JobStatus run() throws IOException, InterruptedException {
-              Credentials ts = null;
-              JobConf job = new JobConf();
-              if (jobTokenFile.getFileSystem(job).exists(jobTokenFile)) {
-                ts = Credentials.readTokenStorageFile(jobTokenFile, job);
-              }
               return submitJob(JobID.downgrade(token.getJobID()), token
                   .getJobSubmitDir().toString(), ugi, ts, true);
             }
